production/ingress/api-ingress-lb.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb-ingress
spec:
  rules:
  - host: poc.microservices.com
    http:
      paths:
      - path: /pricesvc/*
        backend:
          serviceName: priceinfo-ingress-service
          servicePort: 80
      - path: /inventorysvc/*
        backend:
          serviceName: inventory-ingress-service
          servicePort: 80
      - path: /productinfosvc/*
        backend:
          serviceName: product-ingress-service
          servicePort: 80
