production/ingress/ms-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ms-nginx-ingress
  namespace: production
spec:
  backend:
    serviceName: nginx
    servicePort: 80
  rules:
  - host: microservice.poc.com
    http:
      paths:
      - path: /productinfosvc/manage/health
        backend:
          serviceName: product-ingress-service
          servicePort: 8080
