production/ingress/wag-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ms-ingress
  namespace: production
spec:
  tls:
  - secretName: mstls
  rules:
  - host: microservice-poc.com
    http:
      paths:
      - path: /pricesvc/manage/health
        backend:
          serviceName: inventory-backend-service
          servicePort: 80
      - path: /productinfosvc/manage/health
        backend:
          serviceName: product-backend-service
          servicePort: 80
      - path: /inventorysvc/manage/health
        backend:
          serviceName: inventory-backend-service
          servicePort: 80
